tests/bad/array2.nx
// decidir se e obrigatorio definir o tamanho do array

var tab1 : array filled by 0;